pod.yaml
  
apiVersion: v1
kind: Pod
metadata:
  name: hello
  labels:
    name: hello
spec:
  containers:
    - name: hello
      image: nginxdemos/hello
      ports:
        - containerPort: 80
